Fixed line-hight below minnimum value and fixed font size issues

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.20 -  3/3/2021 
+ * CA State Template v5.5 -  @version v5.5.20 -  3/4/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -11535,7 +11535,7 @@ html {
 body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.1rem;
-  line-height: 1.45;
+  line-height: 1.5;
   color: #333333;
 }
 
@@ -11559,7 +11559,7 @@ a:hover {
   border-bottom: 1px solid #d6d6d6;
   border-top: 1px solid #d6d6d6;
   padding: 10px 10px 0 10px;
-  margin-bottom: 11.5px;
+  margin-bottom: 12px;
   margin-left: 20px;
 }
 
@@ -11578,48 +11578,48 @@ h1 span[class^="ca-gov-icon-"]:first-child, .h1 span[class^="ca-gov-icon-"]:firs
 h1, .h1 {
   font-size: 38.4px;
   font-size: 2.4rem;
-  margin-top: 0.67em;
-  margin-bottom: 0.55em;
+  margin-top: 3rem;
+  margin-bottom: 1.6rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
 h2, .h2 {
   font-size: 31.04px;
   font-size: 1.94rem;
-  margin-top: 0.83em;
-  margin-bottom: 0.7em;
+  margin-top: 2.7rem;
+  margin-bottom: 1.4rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
 h3, .h3 {
   font-size: 24.64px;
   font-size: 1.54rem;
-  margin-top: 1em;
-  margin-bottom: 0.7em;
+  margin-top: 2.4rem;
+  margin-bottom: 1.2rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
 h4, .h4 {
   font-size: 20px;
   font-size: 1.25rem;
-  margin-top: 1.33em;
-  margin-bottom: 1em;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
 h5, .h5 {
   font-size: 16px;
   font-size: 1rem;
-  margin-top: 1.67em;
-  margin-bottom: 1.3em;
+  margin-top: 1.7rem;
+  margin-bottom: .8rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
 h6, .h6 {
   font-size: 12.8px;
   font-size: 0.8rem;
-  margin-top: 1.67em;
-  margin-bottom: 1.3em;
+  margin-top: 1.4rem;
+  margin-bottom: .6rem;
   font-family: "Asap Condensed", sans-serif;
 }
 
@@ -11640,6 +11640,11 @@ h6, .h6 {
     font-size: 20.8px;
     font-size: 1.3rem;
   }
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  line-height: 1.5;
 }
 
 [class*="icon-"].big {
@@ -11875,7 +11880,7 @@ a.list-group-item {
 }
 
 .main-content > .section {
-  padding-bottom: 23px;
+  padding-bottom: 24px;
 }
 
 /* Two column layout option */
@@ -12191,7 +12196,7 @@ a.list-group-item {
 }
 
 .grid-demo {
-  margin-bottom: 11.5px;
+  margin-bottom: 12px;
 }
 
 .grid-demo div {
@@ -12804,7 +12809,7 @@ a.list-group-item {
   }
   .global-footer ul a {
     display: block;
-    margin-bottom: 11.5px;
+    margin-bottom: 12px;
   }
 }
 
@@ -12818,7 +12823,7 @@ a.list-group-item {
 
 .global-footer .copyright {
   background: #EFEFEF;
-  padding: 5px 0 23px;
+  padding: 5px 0 24px;
 }
 
 @media (max-width: 767px) {
@@ -13688,7 +13693,7 @@ table.gsc-search-box td {
 }
 
 .google_result {
-  margin-bottom: 11.5px;
+  margin-bottom: 12px;
 }
 
 .google_url {
@@ -15495,8 +15500,8 @@ a.second-level-link [class^="ca-gov-icon-"] {
 
 @media (max-width: 767px) {
   .section {
-    padding-top: 23px;
-    padding-bottom: 23px;
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
@@ -15704,7 +15709,7 @@ pre {
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 23px;
+    padding-top: 24px;
     float: none;
     padding-bottom: 1px;
   }
@@ -18145,7 +18150,7 @@ hr.hr-light {
 .panel .panel-heading h2, .panel .panel-heading h3, .panel .panel-heading h4, .panel .panel-heading h5, .panel .card-heading h2, .panel .card-heading h3, .panel .card-heading h4, .panel .card-heading h5, .panel .card-header h2, .panel .card-header h3, .panel .card-header h4, .panel .card-header h5, .card .panel-heading h2, .card .panel-heading h3, .card .panel-heading h4, .card .panel-heading h5, .card .card-heading h2, .card .card-heading h3, .card .card-heading h4, .card .card-heading h5, .card .card-header h2, .card .card-header h3, .card .card-header h4, .card .card-header h5 {
   font-family: "Asap Condensed", sans-serif;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.5;
   color: inherit;
   font-size: 20px;
   font-size: 1.25rem;
@@ -18273,7 +18278,7 @@ hr.hr-light {
 }
 
 .panel-group .panel + .panel, .card-group .card + .card {
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 .panel-heading, .card-heading {
@@ -18341,7 +18346,7 @@ hr.hr-light {
 
 .profile-item .footer a.btn {
   float: right;
-  margin-top: 11.5px;
+  margin-top: 12px;
   padding: 1px 5px;
   font-size: 0.88rem;
   line-height: 1.5;
@@ -18393,7 +18398,7 @@ hr.hr-light {
 }
 
 .main-secondary > .profile-banner {
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 .profile-banner .inner {
@@ -18483,7 +18488,7 @@ figcaption {
 
 .media .media-top img, .media .media-top span {
   display: inherit;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .img-responsive {
@@ -18530,7 +18535,7 @@ figcaption {
   clear: both;
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
   padding: 0 15px;
 }
 
@@ -18614,12 +18619,12 @@ figcaption {
 }
 
 .news-detail .published {
-  margin-bottom: 23px;
+  margin-bottom: 24px;
   clear: both;
 }
 
 .news-detail .keywords {
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 /* NEWS BLOCKS */
@@ -18735,7 +18740,7 @@ figcaption {
 ----------------------------------------- */
 .event-item {
   padding-left: 20px;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .event-item .title {
@@ -18850,7 +18855,7 @@ figcaption {
 }
 
 .event-detail .presenter {
-  padding: 11.5px 0;
+  padding: 12px 0;
 }
 
 .event-detail .presenter::after {
@@ -18922,7 +18927,7 @@ figcaption {
 
 .exam-item .footer a.btn {
   float: right;
-  margin-top: 11.5px;
+  margin-top: 12px;
   padding: 1px 5px;
   font-size: 0.88rem;
   line-height: 1.5;
@@ -19022,7 +19027,7 @@ figcaption {
 
 .course-item .footer a.btn {
   float: right;
-  margin-top: 11.5px;
+  margin-top: 12px;
   padding: 1px 5px;
   font-size: 0.88rem;
   line-height: 1.5;
@@ -19402,7 +19407,7 @@ input:focus, textarea:focus, button:focus, select:focus {
    PUBLICATIONS /source/scss/cagov/publications.scss
 ----------------------------------------- */
 .pub-item {
-  margin-bottom: 11.5px;
+  margin-bottom: 12px;
 }
 
 .pub-item::after {
@@ -19432,7 +19437,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 }
 
 .pub-body {
-  padding: 11.5px 15px !important;
+  padding: 12px 15px !important;
 }
 
 .pub-language, .pub-revision-date, .pub-tags {
@@ -19465,7 +19470,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 .location.banner {
   padding: 15px 0;
   background: whitesmoke;
-  margin-bottom: 11.5px;
+  margin-bottom: 12px;
 }
 
 .location.banner::after {
@@ -19592,7 +19597,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 
 @media (max-width: 991px) {
   .location.banner .summary {
-    margin-top: 11.5px;
+    margin-top: 12px;
   }
 }
 
@@ -19640,12 +19645,12 @@ input:focus, textarea:focus, button:focus, select:focus {
 
 @media (max-width: 991px) {
   .location.banner .btn {
-    margin-top: 11.5px;
+    margin-top: 12px;
   }
 }
 
 .location.contact {
-  margin-bottom: 23px;
+  margin-bottom: 24px;
   position: relative;
 }
 
@@ -19656,7 +19661,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 }
 
 .main-secondary > .location.contact {
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 .location.contact [class^="ca-gov-icon-"] {
@@ -19723,7 +19728,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 
 .location.mini {
   position: relative;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .location.mini::after {
@@ -19760,7 +19765,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 
 @media (max-width: 991px) {
   .location.full .photo {
-    margin-bottom: 11.5px;
+    margin-bottom: 12px;
   }
 }
 
@@ -19774,7 +19779,7 @@ input:focus, textarea:focus, button:focus, select:focus {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 @media (min-width: 768px) {
@@ -19800,7 +19805,7 @@ input:focus, textarea:focus, button:focus, select:focus {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-top: 23px;
+  margin-top: 24px;
 }
 
 @media (min-width: 768px) {
@@ -19828,7 +19833,7 @@ input:focus, textarea:focus, button:focus, select:focus {
   float: left;
   position: relative;
   text-align: center;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
   padding-bottom: 8px;
   padding-left: 15px;
   padding-right: 15px;
@@ -20216,7 +20221,7 @@ input:focus, textarea:focus, button:focus, select:focus {
    JOBS - /source/scss/cagov/jobs.scss
 ----------------------------------------- */
 .job-detail .sub-header {
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .job-item {
@@ -20273,7 +20278,7 @@ input:focus, textarea:focus, button:focus, select:focus {
 
 .job-item .footer a.btn {
   float: right;
-  margin-top: 11.5px;
+  margin-top: 12px;
   padding: 1px 5px;
   font-size: 0.88rem;
   line-height: 1.5;
@@ -20313,7 +20318,7 @@ table.table {
 table.editor-table-default {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 table.editor-table-default > thead > tr > th,
@@ -20323,7 +20328,7 @@ table.editor-table-default > tbody > tr > td,
 table.editor-table-default > tfoot > tr > th,
 table.editor-table-default > tfoot > tr > td {
   padding: 0.75rem;
-  line-height: 1.45;
+  line-height: 1.5;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
 }
@@ -20377,7 +20382,7 @@ table.editor-table-default > thead > tr > th, table.editor-table-default > thead
 table.editor-table-striped {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 table.editor-table-striped > thead > tr > th,
@@ -20387,7 +20392,7 @@ table.editor-table-striped > tbody > tr > td,
 table.editor-table-striped > tfoot > tr > th,
 table.editor-table-striped > tfoot > tr > td {
   padding: 0.75rem;
-  line-height: 1.45;
+  line-height: 1.5;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
 }
@@ -20456,7 +20461,7 @@ table.editor-table-striped > tbody > tr:nth-child(odd) > th, table.editor-table-
 ----------------------------------------- */
 [class^="list-"] {
   list-style-type: none;
-  margin: 11.5px 0;
+  margin: 12px 0;
   padding: 0;
 }
 
@@ -20500,7 +20505,7 @@ ul.list-overstated a {
   padding: 0;
   padding-left: 1.5em;
   margin: 12px 0 10px 0;
-  line-height: 1.4em;
+  line-height: 1.5;
 }
 
 .list-standout ul li:before {
@@ -20643,7 +20648,7 @@ ul.list-overstated a {
 
 .testimonial .thumbnail-top .thumbnail-img {
   display: inherit;
-  margin-bottom: 23px;
+  margin-bottom: 24px;
 }
 
 .testimonial .thumbnail-middle {
@@ -20992,7 +20997,7 @@ blockquote.blockquote-reverse .small:after {
   white-space: nowrap;
   padding: 6px 12px;
   font-size: 1.1rem;
-  line-height: 1.45;
+  line-height: 1.5;
   border-radius: 0;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -21629,7 +21634,7 @@ div[data-state="open"] .title {
 }
 
 .circles-text {
-  font-size: 35px !important;
+  font-size: 2.1875rem !important;
   font-family: "Asap Condensed", sans-serif;
 }
 
@@ -22338,7 +22343,7 @@ div[data-state="open"] .title {
     padding: 0;
   }
   .header-slideshow-banner #primary-carousel .slide-text {
-    bottom: -11.5px;
+    bottom: -12px;
     right: 0;
     font-size: 14px;
     width: 100%;
