--- a/source/scss/cagov/lists.scss
+++ b/source/scss/cagov/lists.scss
@@ -54,7 +54,7 @@ ul.list-overstated {
     padding:0;
     padding-left: 1.5em;
 	margin: 12px 0 10px 0;
-    line-height: 1.4em;
+    line-height: 1.5;
 	
 	ul li:before {
     content:none;
