--- a/source/scss/cagov/number-counter.scss
+++ b/source/scss/cagov/number-counter.scss
@@ -14,7 +14,7 @@
 }
 
 .circles-text { 
-    font-size: 35px !important;
+    font-size: 2.1875rem !important;
     font-family: $headings-font-family;
 }
 
