--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -58,43 +58,43 @@ body {
     // OVER RIDE BOOTSTRAP SIZES
     h1, .h1 {
         @include font-size(2.4);
-        margin-top: 0.67em;
-        margin-bottom: 0.55em;
+        margin-top: 3rem;
+        margin-bottom: 1.6rem;
         font-family: $headings-font-family;
     }
 
     h2, .h2 {
         @include font-size(1.94);
-        margin-top: 0.83em;
-        margin-bottom: 0.7em;
+        margin-top: 2.7rem;
+        margin-bottom: 1.4rem;
         font-family: $headings-font-family;
     }
 
     h3, .h3 {
         @include font-size(1.54);
-        margin-top: 1em;
-        margin-bottom: 0.7em;
+        margin-top: 2.4rem;
+        margin-bottom: 1.2rem;
         font-family: $headings-font-family;
     }
 
     h4, .h4 {
         @include font-size(1.25);
-        margin-top: 1.33em;
-        margin-bottom: 1em;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
         font-family: $headings-font-family;
     }
 
     h5, .h5 {
         @include font-size(1);
-        margin-top: 1.67em;
-        margin-bottom: 1.3em;
+        margin-top: 1.7rem;
+        margin-bottom: .8rem;
         font-family: $headings-font-family;
     }
 
     h6, .h6 {
         @include font-size(0.8);
-        margin-top: 1.67em;
-        margin-bottom: 1.3em;
+        margin-top: 1.4rem;
+        margin-bottom: .6rem;
         font-family: $headings-font-family;
     }
 
@@ -115,6 +115,10 @@ body {
         h4, .h4 {
             @include font-size(1.3);
         }
+    }
+
+    h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+        line-height: $headings-line-height;
     }
 
 
