--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -110,14 +110,14 @@ $font-size-h5: $font-size-base !default;
 $font-size-h6: ceil(($font-size-base * 0.85)) !default; // ~12px
 
 // Unit-less `line-height` for use in components like buttons.
-$line-height-base: 1.45 !global; // 20/14
+$line-height-base: 1.5 !global; // 20/14
 // Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed: floor((16px * $line-height-base)) !default; // ~20px
 
 // By default, this inherits from the `<body>`.
 $headings-font-family: "Asap Condensed", sans-serif;
 $headings-font-weight: 400 !default;
-$headings-line-height: 1.1 !default;
+$headings-line-height: $line-height-base;
 $headings-color: inherit !default;
 
 
