Fixed Decorative element is exposed to assistive technologies issue

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -22283,10 +22283,16 @@ div[data-state="open"] .title {
 
 .owl-carousel .owl-nav button.owl-prev:focus {
   margin-left: 3em;
+  outline: solid 2px #2ea3f2;
 }
 
 .owl-carousel .owl-nav button.owl-next:focus {
   margin-right: 3em;
+  outline: solid 2px #2ea3f2;
+}
+
+button.owl-dot:focus {
+  outline: solid 2px #2ea3f2;
 }
 
 .owl-carousel:hover .owl-nav button.owl-prev:focus {
