Fixed font icons class names

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.3 -  3/10/2021 
+ * CA State Template v6 -  @version v6.0.3 -  3/26/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -10121,7 +10121,7 @@ html {
   content: "\e970";
 }
 
-.ca-gov-icon-collapse1:before {
+.ca-gov-icon-collapse:before {
   content: "\58";
 }
 
@@ -10133,7 +10133,7 @@ html {
   content: "\e621";
 }
 
-.ca-gov-icon-construction1:before {
+.ca-gov-icon-construction:before {
   content: "\e628";
 }
 
@@ -10281,7 +10281,7 @@ html {
   content: "\e991";
 }
 
-.ca-gov-icon-expand1:before {
+.ca-gov-icon-expand:before {
   content: "\59";
 }
 
