--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -470,7 +470,7 @@
 .ca-gov-icon-collapse-all:before {
   content: "\e970";
 }
-.ca-gov-icon-collapse1:before {
+.ca-gov-icon-collapse:before {
   content: "\58";
 }
 .ca-gov-icon-compass:before {
@@ -479,7 +479,7 @@
 .ca-gov-icon-computer:before {
   content: "\e621";
 }
-.ca-gov-icon-construction1:before {
+.ca-gov-icon-construction:before {
   content: "\e628";
 }
 .ca-gov-icon-contact-us:before {
@@ -590,7 +590,7 @@
 .ca-gov-icon-expand-all:before {
   content: "\e991";
 }
-.ca-gov-icon-expand1:before {
+.ca-gov-icon-expand:before {
   content: "\59";
 }
 .ca-gov-icon-external-link:before {
