--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.20 -  3/4/2021 
+ * CA State Template v5.5 -  @version v5.5.20 -  3/26/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
@@ -618,7 +618,7 @@
   content: "\e970";
 }
 
-.ca-gov-icon-collapse1:before {
+.ca-gov-icon-collapse:before {
   content: "\58";
 }
 
@@ -630,7 +630,7 @@
   content: "\e621";
 }
 
-.ca-gov-icon-construction1:before {
+.ca-gov-icon-construction:before {
   content: "\e628";
 }
 
@@ -778,7 +778,7 @@
   content: "\e991";
 }
 
-.ca-gov-icon-expand1:before {
+.ca-gov-icon-expand:before {
   content: "\59";
 }
 
