--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.20 -  3/26/2021 
+ * CA State Template v5.5 -  @version v5.5.21 -  4/21/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -11536,7 +11536,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.1rem;
   line-height: 1.5;
-  color: #333333;
+  color: #111111;
 }
 
 /* make body font size larger for mobile */
@@ -11683,20 +11683,13 @@ code {
 }
 
 .main-content a:not(.btn) {
-  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
-  background-repeat: repeat-x;
-  background-size: 2px 1px;
-  background-position: center bottom 4%;
-  background-origin: padding-box;
-  text-decoration: none !important;
-}
-
-.main-content a:not(.btn):hover {
-  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
-  text-decoration: none !important;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-thickness: from-font;
 }
 
 .tab-group .nav-tabs li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordion .panel-heading a, .panel-group .panel-heading .panel-title a, .accordion .panel-heading .panel-title a, .panel-group .panel-heading .panel-title a, .service-tile-content .panel-heading .panel-title a, .service-tile-content .panel-heading a, .accordion .panel-heading a, .icon-link, .social a, .main-content a[role="button"], .main-content a[role="tab"], .gallery-item, .news-link, .news-icon, .socialsharer-container a, .thumbnail a, .explore-invite a {
+  text-decoration: none !important;
   background-image: none !important;
 }
 
@@ -11717,6 +11710,7 @@ code {
   padding-right: 1.25rem !important;
   margin-top: 0 !important;
   background-image: none !important;
+  text-decoration: none !important;
 }
 
 a.list-group-item {
@@ -13215,7 +13209,7 @@ a.list-group-item {
 }
 
 .search-container .search-locator, .search-container.featured-search.active .search-locator {
-  color: #333333;
+  color: #111111;
   float: left;
   text-align: center;
   width: 100px;
@@ -13535,7 +13529,7 @@ table.gsc-search-box td {
 /* Full Width navigation search */
 @media (min-width: 992px) {
   .full-width-nav .featured-search {
-    top: -65px;
+    top: -65px !important;
     right: 15px;
     left: unset !important;
     width: 40%;
@@ -18085,7 +18079,7 @@ body {
   vertical-align: baseline;
   border-radius: .25em;
   background-color: #ccc;
-  color: #333333;
+  color: #111111;
   margin-left: 5px;
   margin-right: 5px;
 }
@@ -18110,7 +18104,7 @@ a .keywords ul li:hover, a .keywords ul li:focus, a .keywords ol li:hover, a .ke
 }
 
 .keywords ul a, .keywords ol a {
-  color: #333333;
+  color: #111111;
 }
 
 /* -----------------------------------------
@@ -20868,7 +20862,7 @@ blockquote.blockquote-reverse .small:after {
 }
 
 .btn-highlight {
-  color: #333333;
+  color: #111111;
   background-color: #FDB81E;
   border-color: #FDB81E;
   -webkit-transition: all 0.5s;
@@ -20892,11 +20886,11 @@ blockquote.blockquote-reverse .small:after {
 
 .btn-highlight .badge {
   color: #FDB81E;
-  background-color: #333333;
+  background-color: #111111;
 }
 
 .btn-outline-highlight {
-  color: #333333;
+  color: #111111;
   background-color: #fff;
   border-color: #FDB81E;
   -webkit-transition: all 0.5s;
@@ -20904,7 +20898,7 @@ blockquote.blockquote-reverse .small:after {
 }
 
 .btn-outline-highlight:hover, .btn-outline-highlight:focus, .btn-outline-highlight:not(:disabled):not(.disabled):active, .btn-outline-highlight:not(:disabled):not(.disabled).active, .btn-outline-highlight .show > .dropdown-toggle, .open > .dropdown-toggle .btn-outline-highlight {
-  color: #333333;
+  color: #111111;
   background-color: #FDB81E;
   border-color: #f5aa02;
 }
@@ -20920,7 +20914,7 @@ blockquote.blockquote-reverse .small:after {
 
 .btn-outline-highlight .badge {
   color: #fff;
-  background-color: #333333;
+  background-color: #111111;
 }
 
 .btn-secondary {
@@ -22366,10 +22360,6 @@ button.owl-dot:focus {
   }
 }
 
-.owl-height {
-  overflow: auto !important;
-}
-
 .plotly-chart .plotly-chart--loading {
   font-size: 150%;
   text-align: center;
@@ -22767,7 +22757,7 @@ a.label-dark:focus, a.label-dark.focus {
 }
 
 .bg-highlight a {
-  color: #333333;
+  color: #111111;
   text-decoration: underline;
 }
 
@@ -23053,7 +23043,7 @@ a.label-dark:focus, a.label-dark.focus {
 }
 
 .underline-text-color {
-  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-image: linear-gradient(to right, #111111 50%, transparent 50%);
   background-repeat: repeat-x;
   background-size: 2px 1px;
   background-position: center bottom 4%;
@@ -23062,7 +23052,7 @@ a.label-dark:focus, a.label-dark.focus {
 }
 
 .underline-hover-text-color:hover, .underline-hover-text-color:focus {
-  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-image: linear-gradient(to right, #111111 50%, transparent 50%);
   background-repeat: repeat-x;
   background-size: 2px 1px;
   background-position: center bottom 4%;
@@ -23392,7 +23382,7 @@ a.label-dark:focus, a.label-dark.focus {
 }
 
 .color-gray-dark, .color-grey-dark {
-  color: #333333;
+  color: #111111;
 }
 
 .color-gray, .color-grey {
@@ -23976,7 +23966,9 @@ a.label-dark:focus, a.label-dark.focus {
   font-size: .7rem !important;
   position: relative;
   top: -3px;
-  margin-left: 3px;
+  padding-left: 2px;
+  text-decoration: none;
+  display: inline-block;
 }
 
 /*------------------------------------
