--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -684,11 +684,13 @@
     font-size: .7rem !important;
     position: relative;
     top: -3px;
-    margin-left: 3px;
+    padding-left: 2px;
+    text-decoration: none;
+    display: inline-block;
   }
   
 
-    /*------------------------------------
+/*------------------------------------
   Rounded borders
 ------------------------------------*/
     .rounded-20 {
