--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -791,7 +791,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
 /* Full Width navigation search */
 @media (min-width: 992px) {
     .full-width-nav .featured-search {
-        top: -65px;
+        top: -65px !important;
         right: 15px;
         left: unset !important;
         width: 40%;
