--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -168,6 +168,7 @@ body {
 // UNDELINE EXEPTIONS
 .tab-group .nav-tabs
 li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordion .panel-heading a, .panel-group .panel-heading .panel-title a, .accordion .panel-heading .panel-title a, .panel-group .panel-heading .panel-title a, .service-tile-content .panel-heading .panel-title a, .service-tile-content .panel-heading a, .accordion .panel-heading a, .icon-link, .social a, .main-content a[role="button"], .main-content a[role="tab"], .gallery-item, .news-link, .news-icon, .socialsharer-container a, .thumbnail a, .explore-invite a {
+    text-decoration: none !important;
     background-image: none !important;
 }
 
@@ -189,6 +190,7 @@ li > a, .main-content .btn, .panel-title, .panel-heading a, .btn-more, .accordio
     padding-right: ($spacer * 1.25) !important;
     margin-top: 0 !important;
     background-image: none !important;
+    text-decoration: none !important;
 }
 a.list-group-item {
     margin-bottom: 0px !important;
