--- a/source/scss/cagov/carousel.scss
+++ b/source/scss/cagov/carousel.scss
@@ -728,3 +728,8 @@ button.owl-dot:focus {
         }
     }
 }
+
+//  default background for a11y
+.owl-carousel .backdrop {
+    background-color: #000 !important;
+}
