--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.21 -  4/21/2021 
+ * CA State Template v5.5 -  @version v5.5.22 -  6/2/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -21505,7 +21505,7 @@ fieldset[disabled] .btn-more {
   left: 0;
   width: 100%;
   background: #12151a;
-  opacity: 0.9;
+  opacity: 1;
   color: #fff;
   padding: 10px 0;
 }
@@ -22358,6 +22358,10 @@ button.owl-dot:focus {
   .header-slideshow-banner .banner-pager, .header-slideshow-banner .banner-play-pause {
     top: 15px;
   }
+}
+
+.owl-carousel .backdrop {
+  background-color: #000 !important;
 }
 
 .plotly-chart .plotly-chart--loading {
