--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.22 -  6/2/2021 
+ * CA State Template v5.5 -  @version v5.5.22 -  6/25/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -11553,6 +11553,11 @@ a {
 
 a:hover {
   color: #02374e;
+}
+
+/* Solution for links that are behind fixed Header */
+#main-content a, #main-content button {
+  scroll-margin-top: 120px !important;
 }
 
 .featured-narrative {
