--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -25,6 +25,11 @@ body {
         }
     }
 
+    /* Solution for links that are behind fixed Header */
+    #main-content a, #main-content button {
+        scroll-margin-top: 120px !important;
+    }
+
     .featured-narrative {
         border-bottom: 1px solid #d6d6d6;
         border-top: 1px solid #d6d6d6;
