Pull type.scss updates from v5.5.23

--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -25,6 +25,11 @@ body {
         }
     }
 
+    /* Solution for links that are behind fixed Header */
+    #main-content a, #main-content button {
+        scroll-margin-top: 120px !important;
+    }
+
     .featured-narrative {
         border-bottom: 1px solid #d6d6d6;
         border-top: 1px solid #d6d6d6;
@@ -36,7 +41,6 @@ body {
     //
     // TYPOGRAPHY
     // --------------------------------------------------
-
 
     p {
         margin-bottom: 0.7rem;
