updated bootstrap to v5.0.2, fixed gulp js uglify functions

--- a/source/scss/colorscheme/colorscheme-oceanside-import.scss
+++ b/source/scss/colorscheme/colorscheme-oceanside-import.scss
@@ -2,9 +2,9 @@
 //   COLOR SCHEME OCEANSIDE IMPORT
 //-----------------------------------------
 
-@import "../bootstrap/functions";
-@import "../bootstrap/variables";
-@import "../bootstrap/mixins";
+@import "../bootstrap/scss/functions";
+@import "../bootstrap/scss/variables";
+@import "../bootstrap/scss/mixins";
 @import "../variables.scss";
 @import "../cagov/mixins.scss";
 
