--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -5,9 +5,6 @@
 //
 // BOOTSTRAP CORE
 // -------------------------------------------------
-
-
-// Configuration
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
@@ -24,7 +21,7 @@
 @import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
-@import "bootstrap/scss/dropdown";
+//@import "dbootstrap/scss/ropdown";
 @import "bootstrap/scss/button-group";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/navbar";
@@ -44,14 +41,11 @@
 @import "bootstrap/scss/carousel";
 @import "bootstrap/scss/spinners";
 @import "bootstrap/scss/offcanvas";
-@import "bootstrap/scss/placeholders";
 
 // Helpers
 @import "bootstrap/scss/helpers";
 
-// Utilities
-@import "bootstrap/scss/utilities/api";
-// scss-docs-end import-stack
+
 
 
 
