--- a/css/colorscheme-oceanside.css
+++ b/css/colorscheme-oceanside.css
@@ -2760,12 +2760,12 @@ input[type="radio"]:checked + * i {
    /source/scss/colorscheme/utility.scss
 ----------------------------------------- */
 .utility-header {
-  background: #fff;
-  color: black;
+  background: #046B99;
+  color: #ffffff;
 }
 
 .utility-header a {
-  color: black;
+  color: #ffffff;
 }
 
 .utility-header a:hover, .utility-header a:focus, .utility-header a.hovered {
