--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -71,8 +71,10 @@
         line-height: 5.125rem; // Beta 6.0 addition
         -webkit-transition: all 0.3s;
         transition: all 0.3s; // Smooth transition for compact header
+        padding-left: 15px;
         @media (max-width: $screen-sm-max) {
             max-width: 400px;
+            padding-left: 0;
         }
 
         img {
