--- a/source/scss/colorscheme/cs-utility.scss
+++ b/source/scss/colorscheme/cs-utility.scss
@@ -4,11 +4,11 @@
 ----------------------------------------- */
 
 .utility-header {
-    background: #fff;
-    color: black;
+    background: $color-p2;
+    color: contrast($color-p2);
 
     a {
-        color: black;
+        color: contrast($color-p2);
 
         &:hover, &:focus, &.hovered {
             color: $utility-link-hover-color;
