--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -42,6 +42,7 @@
     a {
         display: inline-block;
         padding: 0;
+        text-decoration: none;
 
         &:hover, &:focus, &.hovered {
             text-decoration: none;
@@ -277,8 +278,8 @@
                 }
 
                 @media (max-width: $screen-xs-max) {
-                    margin-right: 15px;
-                    margin-left: 15px;
+                    margin-right: 12px;
+                    margin-left: 0;
                 }
 
                 a {
