--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -8,7 +8,7 @@
     top: 0;
     width: 100%;
     min-height: 38px; // beta 6.0 addition
-    
+    transition: all 0.3s ease;
 
 
     @media (max-width: $screen-xs-max) {
